<resources>
    <string name="app_name">RtkBand</string>
    <string name="hour_min"> %1$dh %2$dm</string>
    <string name="total_hour_min">Total %1$dh %2$dm</string>
    <string name="hour">h</string>
    <string name="minutes">min</string>
    <string name="second">s</string>
    <string name="second_value">%1$ds</string>
    <string name="minutes_value">%1$dm</string>
    <string name="hour_value">%1$dh</string>
    <string name="step_title">Step</string>
    <string name="goal">Goal</string>
    <string name="step_value">%d Steps</string>
    <string name="age_value">%1$d</string>
    <string name="cm_value">%1$d cm</string>
    <string name="kilogram_value">%1$d kg</string>
    <string name="goal_percent">%1$.2f %%</string>
    <string name="total_step_value">Total %d Steps</string>
    <string name="step_goal">Goal/ %d Steps</string>
    <string name="distance">Distance</string>
    <string name="calorie">Calorie</string>
    <string name="step_quality">Quality</string>
    <string name="distance_value">%1$.3f km</string>
    <string name="calorie_value">%1$.3f kcal</string>
    <string name="detail_sport_value">Distance: %1$.3f km, Calorie: %2$.3f kcal, Step: %3$d Steps</string>
    <string name="detail_sleep_value">Deep: %1$dh %2$dm, Light: %3$dh %4$dm, Awake: %5$d times</string>
    <string name="detail_sleep_select_value">%1$s %2$s:%3$s-%4$s:%5$s</string>
    <string name="step_quality_0">failure</string>
    <string name="step_quality_1">qualified</string>
    <string name="step_quality_2">good</string>
    <string name="step_quality_3">excellent</string>
    <string name="sleep_quality_0">bad</string>
    <string name="sleep_quality_1">normal</string>
    <string name="sleep_quality_2">good</string>
    <string name="sleep_title">Sleep</string>
    <string name="deep_sleep">Deep</string>
    <string name="light_sleep">Light</string>
    <string name="sleep_latency">Awake</string>
    <string name="times_value">%d times</string>
    <string name="sleep_quality">Quality</string>
    <string name="no_sleep_data">No data</string>
    <string name="details_header">Details</string>
    <string name="day">Day</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="date_value">%1$d/%2$d/%3$d</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday_week">SUN</string>
    <string name="monday_week">MON</string>
    <string name="tuesday_week">TUE</string>
    <string name="wednesday_week">WED</string>
    <string name="thursday_week">THU</string>
    <string name="friday_week">FRI</string>
    <string name="saturday_week">SAT</string>
    <string name="sunday_full">Sunday</string>
    <string name="monday_full">Monday</string>
    <string name="tuesday_full">Tuesday</string>
    <string name="wednesday_full">Wednesday</string>
    <string name="thursday_full">Thursday</string>
    <string name="friday_full">Friday</string>
    <string name="saturday_full">Saturday</string>
    <string name="rename">Rename</string>
    <string name="name_should_not_null">The input name should not be null.</string>
    <string name="name_too_long">Up to six input Chinese characters or 20 letters (1 Chinese characters equal three letters in length).</string>
    <string name="sync_data_success">Sync data success!</string>
    <string name="exit_app_title">Toast message</string>
    <string name="exit_app_text">Are you sure to exit?</string>
    <string name="exit_ota_text">Is in OTA, exit would be likely to lead the bracelet broken, are you sure to exit?</string>
    <string name="exit_ota_text_force">Is in OTA, exit would be likely to lead the bracelet broken, please wait?</string>
    <string name="exit_without_save_alarm_setting">Alarm setting is changed, Are you sure to exit without save alarm?</string>
    <string name="save_alarm_setting_text">Alarm setting is changed, save alarm setting?</string>
    <string name="current_device_name">Current device name is: </string>
    <string name="tomorrow_has_not_start_yet">Tomorrow has not started yet!</string>
    <string name="future_has_not_start_yet">Future has not started yet!</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="OK">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="settings_personage">Personal information</string>
    <string name="settings_search_device">Search devices</string>
    <string name="settings_my_device">My device</string>
    <string name="settings_push_message">Push message</string>
    <string name="settings_wechat_interface">Wechat interface</string>
    <string name="settings_about">About</string>
    <string name="settings_quit">Quit</string>
    <string name="settings_calls_remind">Calls to remind</string>
    <string name="settings_sms_remind">SMS to remind</string>
    <string name="settings_qq_remind">QQ to remind</string>
    <string name="settings_wechat_remind">WeChat to remind</string>
    <string name="settings_mydevice_syncing_remind_setting">Syncing remind settings...</string>
    <string name="settings_push_message_notify_access">Please enable current app notify manage access.</string>
    <string name="settings_push_message_notify_access_title">Notification Access</string>
    <string name="settings_personage_head_portrait">Avatar</string>
    <string name="settings_personage_name">Name</string>
    <string name="settings_personage_rename">Rename</string>
    <string name="settings_personage_set_avatar">Set Avatar</string>
    <string name="settings_personage_make_sure_sdcard">Please make sure the SD card is already insert.</string>
    <string name="settings_personage_set_avatar_album">Album</string>
    <string name="settings_personage_set_avatar_photograph">Photograph</string>
    <string name="settings_personage_gender">Gender</string>
    <string name="settings_personage_gender_male">Male</string>
    <string name="settings_personage_gender_female">Female</string>
    <string name="settings_personage_age">Age</string>
    <string name="settings_personage_height">Height</string>
    <string name="settings_personage_weight">Weight</string>
    <string name="settings_personage_log_off">Log Off</string>
    <string name="settings_personage_log_off_title">Toast message</string>
    <string name="settings_personage_log_off_text">Are you sure to log off?</string>
    <string name="settings_mydevice_syncing_user_profile">Syncing user profile...</string>
    <string name="settings_personage_step_total">Today the task</string>
    <string name="settings_bracelet">Band setting</string>
    <string name="settings_mydevice_smart_unlock">Smart unlock</string>
    <string name="settings_mydevice_smart_lost">Intelligent anti-lost</string>
    <string name="settings_mydevice_sitting_remind_period">Posture remind</string>
    <string name="settings_mydevice_off_screen_time">Off-screen time</string>
    <string name="settings_mydevice_find_bracelet">Find band</string>
    <string name="settings_mydevice_smart_alarm_clock">Smart alarm clock</string>
    <string name="settings_mydevice_alarm_period_title">Alarm period</string>
    <string name="settings_mydevice_alarm_setting">Alarm settings</string>
    <string name="settings_mydevice_alarm">Alarm</string>
    <string name="settings_mydevice_alarm_repetition">Repetition</string>
    <string name="settings_mydevice_alarm_and_remind">Alarm and remind</string>
    <string name="settings_mydevice_add_alarm">Add alarm</string>
    <string name="settings_mydevice_delete_alarm">Delete alarm</string>
    <string name="settings_mydevice_save_alarm">Save alarm</string>
    <string name="settings_mydevice_alarm_not_change">Alarm setting not change.</string>
    <string name="settings_mydevice_reach_max_alarm">Band only support %1$d alarms</string>
    <string name="settings_mydevice_syncing_alarm">Syncing alarm list...</string>
    <string name="settings_mydevice_syncing_alarm_and_notify">Syncing alarm list and notify setting...</string>
    <string name="settings_mydevice_setting_alarm">Setting alarm list...</string>
    <string name="settings_mydevice_setting_alarm_success">Setting alarm list success!</string>
    <string name="settings_mydevice_setting_alarm_failed">Setting alarm list failed!</string>
    <string name="settings_mydevice_setting_alarm_dayflag_onetime">Only once</string>
    <string name="settings_mydevice_setting_alarm_dayflag_every_day">Every day</string>
    <string name="settings_mydevice_sos">SOS</string>
    <string name="settings_mydevice_smart_unlock_change_password">Modify PIN</string>
    <string name="settings_mydevice_rename_bracelet">Rename band</string>
    <string name="settings_mydevice_lost_alarm_time">Alarms time</string>
    <string name="settings_mydevice_long_sit_alarm_time">Long sit time</string>
    <string name="settings_mydevice_long_sit_alarm_time_toast">Long sit time is 1 hour!</string>
    <string name="settings_mydevice_lost_alarm_music">Alert ringtones</string>
    <string name="settings_personage_set_lost_alarm_music">Set Alert ringtones</string>
    <string name="settings_personage_set_lost_alarm_music_clear">Clear</string>
    <string name="settings_personage_set_lost_alarm_music_replace">Replace</string>
    <string name="settings_about_update_app">Update application</string>
    <string name="settings_about_update_ble">Update firmware</string>
    <string name="settings_remove_bond">Remove Bond</string>
    <string name="settings_remove_bond_tip">Remove bond will clear all data of the band, it will disconnect with the band!</string>
    <string name="settings_about_factory_data_reset">Factory data reset</string>
    <string name="settings_about_factory_data_reset_tip">Factory data reset will clear all data of the band and application！ Must re-connect the band to activate after clearing the data!</string>
    <string name="settings_about_help_centre">Help center</string>
    <string name="settings_about_help">Help</string>
    <string name="settings_version_info">Version info</string>
    <string name="syncing_data">Syncing history data...</string>
    <string name="syncing_data_success">Syncing history data success</string>
    <string name="syncing_data_fail">Syncing data fail, please try again</string>
    <string name="start_experience">Start experience</string>
    <string name="progress_bar_timeout">Wait operator timeout, maybe be something error, cancel current connect.</string>
    <string name="connect_with_device_name">Connect to the %1$s, please wait...</string>
    <string name="connect_success">Connected to the remote</string>
    <string name="connect_failed">Failure to connect the remote</string>
    <string name="connect_disconnect">Disconnected to the remote</string>
    <string name="disconnect_title">Disconnected notification</string>
    <string name="remove_bond">Remove Bond</string>
    <string name="bond_success">Bond success</string>
    <string name="bond_failure">Bond failure</string>
    <string name="connect_band">Login with the band, please wait...</string>
    <string name="connect_band_success">Login success, just enjoy it</string>
    <string name="something_error">Something error</string>
    <string name="third_party_wx">Wechat</string>
    <string name="third_party_qq">QQ</string>
    <string name="third_party_weibo">Weibo</string>
    <string name="third_party_other_login_type">Other Login Type</string>
</resources>