<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@mipmap/bg_day"
    android:id="@+id/llDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/ivDetailBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/icon_back"
            android:layout_centerVertical="true" />
        <TextView
            android:textSize="16sp"
            android:textColor="@color/white"
            android:id="@+id/tvDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_header"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/tvDayDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/day"
            android:layout_weight="1.0" />
        <TextView
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tvWeekDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/week"
            android:layout_weight="1.0" />
        <TextView
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tvMonthDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/month"
            android:layout_weight="1.0" />
    </LinearLayout>
    <com.realsil.android.wristbanddemo.utility.RealsilLeftViewPager
        android:id="@+id/vpMain"
        android:background="@color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:flipInterval="30" />
</LinearLayout>