<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/day_icon_distance" />
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/distance" />
        </LinearLayout>
        <LinearLayout
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0">
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:id="@+id/tvHomeCurrentDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_value" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/day_icon_sport_energy" />
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/calorie" />
        </LinearLayout>
        <LinearLayout
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0">
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:id="@+id/tvHomeCurrentCalorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calorie_value" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/day_icon_sport_time" />
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/step_quality" />
        </LinearLayout>
        <LinearLayout
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0">
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:id="@+id/tvHomeCurrentQuality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_quality_0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>