<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/fi_wr"
        android:gravity="left"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:textColor="@color/third_party_show_text"
        android:textSize="14sp"
        android:text="@string/third_party_other_login_type"/>
    <View
        android:layout_height="0.1dp"
        android:layout_width="match_parent"
        android:background="@color/third_party_show_text"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivLoginWechat"
                android:background="@drawable/third_party_oval_backgroud"
                android:src="@mipmap/third_party_login_wechat"
                android:scaleType="centerInside"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_party_wx"
                android:textColor="@color/third_party_show_text"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivLoginQQ"
                android:background="@drawable/third_party_oval_backgroud"
                android:src="@mipmap/third_party_login_qq"
                android:scaleType="centerInside"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_party_qq"
                android:textColor="@color/third_party_show_text"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivLoginWeibo"
                android:background="@drawable/third_party_oval_backgroud"
                android:src="@mipmap/third_party_login_sinaweibo"
                android:scaleType="centerInside"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_party_weibo"
                android:textColor="@color/third_party_show_text"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>