<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/day_icon_deep_sleep" />
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/deep_sleep" />
        </LinearLayout>
        <LinearLayout
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0">
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:id="@+id/tvHomeCurrentDeep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_min" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/day_icon_light_sleep" />
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/light_sleep" />
        </LinearLayout>
        <LinearLayout
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0">
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:id="@+id/tvHomeCurrentLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_min" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/day_icon_sleep_latency" />
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/sleep_latency" />
        </LinearLayout>
        <LinearLayout
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0">
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:id="@+id/tvHomeCurrentAwakeTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/times_value" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>